--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit==1.2.0
 pandas==1.3.3
 scikit-learn==0.24.2
-numpy==1.21.2
+numpy
 pickle-mixin==1.0.2
 pip install -r requirements.txt
 streamlit run app.py
+pip install --upgrade pip
+pip install --upgrade setuptools wheel
