--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit==1.2.0
-pandas==1.3.3
-scikit-learn==0.24.2
-numpy
-pickle-mixin==1.0.2
-streamlit run app.py
-pip install --upgrade pip
-pip install --upgrade setuptools wheel
+pandas
+streamlit
+joblib
+scikit-learn
